--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,3 +1,4 @@
 saveDirUsrs=/db2027/usrs
 savedirAcc=json:/db2026/accs
-savedirOrd=/db2026/ords
+savedirOrd=jdbc:mysql://localhost:3306/mydatabase
+savedirOrdUnamePwd=uuu:000
