--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -2,3 +2,4 @@ saveDirUsrs=/db2027/usrs
 savedirAcc=json:/db2026/accs
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
+saveUrlOrdBet=/dbx/ordBet
