--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -3,3 +3,4 @@ savedirAcc=json:/db2026/accs
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
+saveUrlOrdChrg=/dbx/ordChrg
