--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -4,3 +4,4 @@ savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
 saveUrlOrdChrg=/dbx/ordChrg
+saveUrlLogBalance=/dbx/LogBalance
