--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -5,3 +5,4 @@ savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
 saveUrlOrdChrg=/dbx/ordChrg
 saveUrlLogBalance=/dbx/LogBalance
+saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
