--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -6,3 +6,4 @@ saveUrlOrdBet=/dbx/ordBet
 saveUrlOrdChrg=/dbx/ordChrg
 saveUrlLogBalance=/dbx/LogBalance
 saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
+saveUrlOrdWthdr= /dbx/OrdWthdr
