--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -7,3 +7,4 @@ saveUrlOrdChrg=/dbx/ordChrg
 saveUrlLogBalance=/dbx/LogBalance
 saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
 saveUrlOrdWthdr= /dbx/OrdWthdr
+saveUrlLogCms=/dbx/LogCms
