sqlt auto crt colm

--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,4 +1,4 @@
-saveDirUsrs=/db2027/usrs
+saveDirUsrs=jdbc:sqlite:/dbx/usr.db
 savedirAcc=json:/db2026/accs
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
