--- a/cfg/dbcfg_sql.ini
+++ b/cfg/dbcfg_sql.ini
@@ -3,7 +3,7 @@ savedirAcc=json:/db2026/accs
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
-saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
+saveUrlOrdChrg=/dbx/ordChrg
 saveUrlLogBalance=/dbx/LogBalance
 saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
 saveUrlOrdWthdr= /dbx/OrdWthdr
