--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -4,7 +4,7 @@ savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
 saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
-saveUrlLogBalance=/dbx/LogBalance
+saveUrlLogBalance=jdbc:sqlite:/dbx/LogBalance.db
 saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
 saveUrlOrdWthdr= /dbx/OrdWthdr
 saveUrlLogCms=/dbx/LogCms
