--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -10,5 +10,5 @@ saveUrlOrdWthdr= /dbx/OrdWthdr
 
 
 saveUrlLogBalance=jdbc:sqlite:/dbx/LogBalance.db
-saveUrlLogBalanceYinliWlt=/dbx/LogBalanceYinliWlt
+saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt
 saveUrlLogCms=/dbx/LogCms
