--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -6,7 +6,7 @@ savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=/dbx/ordBet
 saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
-saveUrlOrdWthdr= /dbx/OrdWthdr
+saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
 
 saveUrlLogBalance=jdbc:sqlite:/dbx/LogBalance.db
