--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -11,4 +11,4 @@ saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
 saveUrlLogBalance=jdbc:sqlite:/dbx/LogBalance.db
 saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt.db
-saveUrlLogCms=/dbx/LogCms
+saveUrlLogCms=jdbc:sqlite:/dbx/LogCms.db
