--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -4,7 +4,7 @@ saveDirUsrs=jdbc:sqlite:/dbx/usr.db
 
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
-saveUrlOrdBet=/dbx/ordBet
+saveUrlOrdBet=jdbc:sqlite:/dbx/ordBet.db
 saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
 saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
