myssql drv rewrt

--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,10 +1,12 @@
-saveDirUsrs=jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
+saveDirUsrs=jdbc:mysql://localhost:3306/usr
+
+jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
 
 
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
-saveUrlOrdBet=jdbc:sqlite:/dbx/ordBet.db
+saveUrlOrdBet=jdbc:mysql://localhost:3306/ordBet
 saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
 saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
@@ -14,4 +16,7 @@ saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt.db
 saveUrlLogCms=jdbc:sqlite:/dbx/LogCms.db
 
 h2fmt=jdbc:h2:file:c:/dbx/mydatabase.h2;MODE=MySQL
-mysqlfmt=jdbc:mysql://localhost:3306/mydatabase
+mysqlfmt=jdbc:mysql://localhost:3306/mydatabase、
+
+
+com.mysql.cj.jdbc.Driver=org.h2.Driver
