--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -7,7 +7,7 @@ jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=jdbc:mysql://localhost:3306/ordBet
-saveUrlOrdChrg=jdbc:sqlite:/dbx/ordChrg.db
+saveUrlOrdChrg=jdbc:mysql://localhost:3306/ordChrg
 saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
 
