--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,4 +1,4 @@
-saveDirUsrs=jdbc:mysql://localhost:3306/usr
+saveDirUsrs=jdbc:mysql://root:pppppp@localhost:3306/usr
 
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
