--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,22 +1,25 @@
+
+#---- u
 saveDirUsrs=jdbc:mysql://root:pppppp@localhost:3306/usr
 
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
 
-
-savedirOrd=jdbc:mysql://localhost:3306/mydatabase
-savedirOrdUnamePwd=uuu:000
-saveUrlOrdBet=jdbc:mysql://localhost:3306/ordBet
-saveUrlOrdChrg=jdbc:mysql://localhost:3306/ordChrg
+#----ord
+#savedirOrd=jdbc:mysql://localhost:3306/mydatabase
+# savedirOrdUnamePwd=uuu:000
+saveUrlOrdBet=jdbc:mysql://root:pppppp@localhost:3306/ordBet
+saveUrlOrdChrg=jdbc:mysql://root:pppppp@localhost:3306/ordChrg
 saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
 
-
-saveUrlLogBalance=jdbc:sqlite:/dbx/LogBalance.db
+#----log
+saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
 saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt.db
 saveUrlLogCms=jdbc:sqlite:/dbx/LogCms.db
 
+#---othr
 h2fmt=jdbc:h2:file:c:/dbx/mydatabase.h2;MODE=MySQL
 mysqlfmt=jdbc:mysql://localhost:3306/mydatabase、
 
 
-com.mysql.cj.jdbc.Driver=org.h2.Driver
+# com.mysql.cj.jdbc.Driver=org.h2.Driver
