--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -10,7 +10,7 @@ jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 # savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=jdbc:mysql://root:pppppp@localhost:3306/ordBet
 saveUrlOrdChrg=jdbc:mysql://root:pppppp@localhost:3306/ordChrg
-saveUrlOrdWthdr= jdbc:sqlite:/dbx/OrdWthdr.db
+saveUrlOrdWthdr=hbnt:OrdWthdr.hibernate.cfg.xml
 
 #----log
 saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
