--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -15,7 +15,7 @@ saveUrlOrdWthdr=hbnt:OrdWthdr.hibernate.cfg.xml
 #----log
 saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
 saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt.db
-saveUrlLogCms=jdbc:sqlite:/dbx/LogCms.db
+saveUrlLogCms=hbnt:jdbc:mysql://root:pppppp@localhost:3306/LogCms
 
 #---othr
 h2fmt=jdbc:h2:file:c:/dbx/mydatabase.h2;MODE=MySQL
