--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -14,7 +14,7 @@ saveUrlOrdWthdr=hbnt:OrdWthdr.hibernate.cfg.xml
 
 #----log
 saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
-saveUrlLogBalanceYinliWlt=jdbc:sqlite:/dbx/LogBalanceYinliWlt.db
+saveUrlLogBalanceYinliWlt=hbnt:jdbc:mysql://localhost:3306/LogBalanceYinliWlt?user=root&password=pppppp
 saveUrlLogCms=hbnt:jdbc:mysql://root:pppppp@localhost:3306/LogCms
 
 #---othr
