--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,6 +1,6 @@
 
 #---- u
-saveDirUsrs=jdbc:mysql://root:pppppp@localhost:3306/usr
+saveDirUsrs=hbnt:jdbc:mysql://localhost:3306/usr?user=root&password=pppppp
 
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
