--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -8,9 +8,9 @@ jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 #----ord
 #savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 # savedirOrdUnamePwd=uuu:000
-saveUrlOrdBet=jdbc:mysql://root:pppppp@localhost:3306/ordBet
-saveUrlOrdChrg=jdbc:mysql://root:pppppp@localhost:3306/ordChrg
-saveUrlOrdWthdr=hbnt:OrdWthdr.hibernate.cfg.xml
+saveUrlOrdBet=hbnt:jdbc:mysql://localhost:3306/ordBet?user=root&password=pppppp
+saveUrlOrdChrg=hbnt:jdbc:mysql://localhost:3306/ordChrg?user=root&password=pppppp
+saveUrlOrdWthdr=hbnt:jdbc:mysql://localhost:3306/OrdWthdr?user=root&password=pppppp
 
 #----log
 saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
