--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,6 +1,6 @@
 
 #---- u
-saveDirUsrs=hbnt:jdbc:mysql://localhost:3306/usr?user=root&password=pppppp
+saveDirUsrs=hbnt:jdbc:mysql://localhost:3306/prjdb?user=root&password=pppppp
 
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
