--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,6 +1,6 @@
 
 #---- u
-saveDirUsrs=hbnt:jdbc:mysql://localhost:3306/prjdb?user=root&password=pppppp
+saveDirUsrs=jdbc:mysql://localhost:3306/prjdb?user=root&password=pppppp
 
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
@@ -8,9 +8,9 @@ jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 #----ord
 #savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 # savedirOrdUnamePwd=uuu:000
-saveUrlOrdBet=hbnt:jdbc:mysql://localhost:3306/ordBet?user=root&password=pppppp
-saveUrlOrdChrg=hbnt:jdbc:mysql://localhost:3306/ordChrg?user=root&password=pppppp
-saveUrlOrdWthdr=hbnt:jdbc:mysql://localhost:3306/OrdWthdr?user=root&password=pppppp
+saveUrlOrdBet=jdbc:mysql://localhost:3306/ordBet?user=root&password=pppppp
+saveUrlOrdChrg=jdbc:mysql://localhost:3306/ordChrg?user=root&password=pppppp
+saveUrlOrdWthdr=jdbc:mysql://localhost:3306/OrdWthdr?user=root&password=pppppp
 
 #----log
 saveUrlLogBalance=jdbc:mysql://root:pppppp@localhost:3306/LogBalance
