--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -9,7 +9,7 @@ jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 #savedirOrd=jdbc:mysql://localhost:3306/mydatabase
 # savedirOrdUnamePwd=uuu:000
 saveUrlOrdBet=jdbc:mysql://localhost:3306/ordBet?user=root&password=pppppp
-saveUrlOrdChrg=jdbc:mysql://localhost:3306/ordChrg?user=root&password=pppppp
+saveUrlOrdChrg=jdbc:mysql://localhost:3306/prjdb?user=root&password=pppppp
 saveUrlOrdWthdr=jdbc:mysql://localhost:3306/OrdWthdr?user=root&password=pppppp
 
 #----log
