--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,17 @@
     <dependencies>
 
         <dependency>
+            <groupId>uke</groupId>
+            <artifactId>ormJpaAt</artifactId>
+            <version>88</version> </dependency>
+
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.43.2.2</version> <!-- Use the latest version available -->
         </dependency>
 
-
+<!--
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>your-artifact-id</artifactId>
@@ -69,14 +74,32 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/libjar/ormJpaAt-88.jar</systemPath>
         </dependency>
+-->
 
+
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>your-artifact-id</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libjar/mysql-connector-j-8.2.0.jar</systemPath>
+        </dependency>
         <!-- JPA 3.1 API -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
-            <scope>provided</scope>
+
         </dependency>
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version> <!-- Use the latest version available -->
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
