--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             <version>3.1.0</version> <!-- Or use the version corresponding to your JPA implementation -->
         </dependency>
 
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/javax.jdo/jdo-api -->
         <dependency>
             <groupId>javax.jdo</groupId>
