hbnt api qry list by sql

--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,7 +1,7 @@
 
 #---- u
-saveDirUsrs=jdbc:p6spy:mysql://localhost:3306/prjdb?user=root&password=pppppp
-
+# saveDirUsrs=jdbc:p6spy:mysql://localhost:3306/prjdb?user=root&password=pppppp
+saveDirUsrs=/000dbx/
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
 
