--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
         </repository>
     </repositories>
     <dependencies>
-
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.json</groupId>
