--- a/cfg/dbcfg.ini
+++ b/cfg/dbcfg.ini
@@ -1,7 +1,8 @@
 
 #---- u
 # saveDirUsrs=jdbc:p6spy:mysql://localhost:3306/prjdb?user=root&password=pppppp
-saveDirUsrs=/000dbx/
+#saveDirUsrs=/000dbx/
+saveDirUsrs=jdbc:p6spy:mysql://localhost:3306/prjdb?user=root&password=pppppp
 jdbc:h2:file:c:/dbh2dir/usr.h2;MODE=MySQL
 
 
