--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,40 @@
             <version>20210307</version>
         </dependency>
 
-            <!-- Spring Core（包含 SpEL）-->
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>1.9.0</version>
+            </dependency>
+
+
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-reflect -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>1.9.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
+        <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.29.2-GA</version>
+            </dependency>
+
+            <!-- 用于 JSON 序列化（这里使用 Gson，你可以换成其他库） -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.10.1</version>
+            </dependency>
+
+
+
+        <!-- Spring Core（包含 SpEL）-->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
