--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,17 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.12.3</version> <!-- 使用最新版 -->
+        </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
