--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
             <version>4.9.1</version>
         </dependency>
 
+
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>3.3.0</version>
+            </dependency>
+
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
