--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
 
         <dependency>
