--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
         </dependency>
 
 
+            <dependency>
+                <groupId>org.picocontainer</groupId>
+                <artifactId>picocontainer</artifactId>
+                <version>2.15</version>
+            </dependency>
+
+
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
