--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
                 <artifactId>picocontainer</artifactId>
                 <version>2.15</version>
             </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
         <!--
 
              <dependency>
