--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,28 @@
             <version>1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.web3j/core -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.web3j/crypto -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>crypto</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.web3j/utils -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>utils</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
         <!--
 
              <dependency>
