--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.16.0</version> <!-- 版本号可以根据你的 Jackson 版本调整 -->
+        </dependency>
 
 
             <!-- SpringDoc OpenAPI for Spring Framework -->
