--- a/static/doc.yaml
+++ b/static/doc.yaml
@@ -15,8 +15,11 @@ tags:
     description: 用户方面接口
   - name: wlt
     description: 钱包方面接口
+  - name: bet
+    description: 注单方面接口
   - name: YLwlt
     description: 盈利钱包方面接口
+
 
 
 
@@ -158,7 +161,7 @@ paths:
       summary: 转账操作
       description: 进行转账操作
       tags:
-        - wlt 钱包方面接口
+        - wlt
       parameters:
         - name: uname
           in: cookie
@@ -207,7 +210,7 @@ paths:
   /CompleteChargeHdr:
     get:
       tags:
-        - "wlt 钱包方面接口"
+        -  wlt
       summary: "完成充值订单"
       description: "根据订单 ID 完成充值操作"
       parameters:
@@ -234,6 +237,7 @@ paths:
 
   /RechargeHdr:
     get:
+
       components:
         securitySchemes:
           cookieAuth:
@@ -244,8 +248,8 @@ paths:
       security:
         - cookieAuth: [ ]
       tags:
-        - wlt 钱包方面接口
-      summary:   recharge
+        - wlt
+      summary:   充值
       description: This endpoint retrieves recharge header information based on the provided amount and username.
       parameters:
         - in: query
