--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     </modules>
 
     <properties>
+        <kotlin.compiler.language.version>1.8</kotlin.compiler.language.version>
+        <kotlin.compiler.api.version>1.8</kotlin.compiler.api.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -62,6 +64,16 @@
     </repositories>
 
 <dependencies>
+
+
+
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>1.8.0</version>  <!-- 使用最新版本 -->
+        </dependency>
+
+
 
     <!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
     <dependency>
@@ -679,7 +691,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>${kotlin.version}</version>
+                <version>2.1.0</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -692,6 +704,7 @@
                                 <source>src/main/java</source>
                                 <source>target/generated-sources/annotations</source>
                                 <source>asrc</source>
+                                <source>src</source>
                             </sourceDirs>
                         </configuration>
                     </execution>
