--- a/static/doc.yaml
+++ b/static/doc.yaml
@@ -476,3 +476,22 @@ paths:
       tags:
         - ylwlt
       summary: "资金调整 盈利钱包"
+      parameters:
+        - name: adjustType
+          in: query
+          required: true
+          description: "调整类型 增加+  减去-"
+          schema:
+            type: string
+            example: "+"
+
+        - name: changeAmount
+          in: query
+          required: true
+          description: "改改的金额  "
+          schema:
+            type: string
+            example: "1"
+      responses:
+        '200':
+          description: 成功响应
